--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,18 +5,15 @@
  </head>
   <body>
     <div style="display: flex; justify-content: center;">
-    <form action="/signup"  method="post" class="form-div">
+    <form action="/login"  method="POST" class="form-div">
       <h3>Manage Account</h3>
       <div style="margin-top: 35px;">
       <p>Username</p>
       <input type="name" name="name">
-      <p>Email</p>
-      <input type="email" name="email">
       <p>Password</p>
       <input type="password" name="password">
       <div class="reg-log">
-        <button><a href="./index.html">Register</a></button>
-        <button><a href="login.html">Log in</a></button>
+        <button type="submit">Log in</button>
         <p class="forgot-password">Forgot password?</p>
       </div>
       </div>
